--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "@types/react-dom": "^18.2.4",
     "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -43,8 +45,9 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.4",
+    "@types/react-burger-menu": "^2.8.3",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
-    "typescript": "^5.0.4"
+    "typescript": "^4.9.5"
   }
 }
