--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
