--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
+    "build-frontend": "npm run --prefix ../frontend build && rm -Rf public && cp -R ../frontend/build public",
     "dev": "concurrently \"nodemon index.js\" \"npx tsc --watch\"",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
