--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,5 +55,6 @@
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
     "typescript": "^4.9.5"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
