--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
